cargo-features = ["edition2021"]

[package]
name = "index-utils"
version = "2.2.0"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2021"
description = "Utilities for working with indices"
repository = "https://github.com/vandenheuvel/index-utils"
license = "GPL-3.0-only"

keywords = ["index", "sparse", "utilities"]
categories = ["algorithms", "data-structures"]

[dependencies]
num-traits = { version = "0.2.14", optional = true }

[dev-dependencies]
relp-num = "0.0.5"
